--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,6 +57,20 @@ services:
     networks:
       - backend
 
+
+  ingestion-ui:
+    build: ./apps/ui/ingestion-ui
+    environment:
+      HOST: "0.0.0.0"
+      PORT: 3003
+      # Add other necessary environment variables here
+    depends_on:
+      - api
+    ports:
+      - "3003:3003"
+    networks:
+      - backend
+
   api:
     <<: *common-service
     environment:
